--- a/Projeto Sp Medical Group/sp_medical_group/src/assets/css/App.css
+++ b/Projeto Sp Medical Group/sp_medical_group/src/assets/css/App.css
@@ -1,107 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  box-sizing: border-box
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box
 }
 
 :root{
-  --cor-tema: #83BEDF;
-  --cor-dashbord: #F6F6F6;
-  --font: normal normal normal 24px 'Montserrat', sans-serif;
-  --font-title: normal normal bold 50px 'Montserrat', sans-serif;
-  --font-size-regular: 24px;
-  --font-size-title:50px;
-  
+    --font: normal normal normal 24px 'Montserrat', sans-serif;
+    --font-titulo: normal normal bold 50px 'Montserrat', sans-serif;
+    --azul: #83BEDF;
 }
 
-.Flex-center-bt{
+.body{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-}
-
-.Flex-center{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.App-header{
-  width: 100vw;
-  height: 75px;
-  margin-top: 10px;
-}
-
-.App-nav{
-  width: 90%;
-  margin: auto;
-}
-
-.App-ul{
-  width: 38vw;
-  font: var(--font);
-  list-style: none;
-}
-
-.App-a{
-  color: black;
-  text-decoration: none;
-  font-size: var(--font-size-regular);
-}
-
-.App-a:hover{
-  color: var(--cor-tema);
-}
-
-.App-a-login{
-  padding: 20px 40px;
-  border-radius: 30px;
-  background-color: var(--cor-tema);
-  font: var(--font);
-
-  font-weight: bold;
-  color: white;
-  text-decoration: none;
-}
-
-/* início main */
-
-.App-main{
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin-top: 10vh;
-}
-
-.App-text{
-  width: 50vw;
-  height: 80vh;
   flex-direction: column;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-h1-p{
-  width: 60%;
-  height: 50%;
+.main{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.App-h1-p h1{
-  font: var(--font-title);
-  margin-bottom: 50px;
+.appTextButton{
+  width: 40vw;
+  height: 60%;
+  margin: 7vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.App-h1-p p{
-  text-align: justify;
+.appTextButton h1{
+  font: var(--font-titulo);
+}
+
+.appTextButton p{
   font: var(--font);
+  text-align: justify;
+  line-height: 4vh;
+}
+
+.appTextButton a{
+  font: var(--font);
+  text-decoration: none;
+  color: white;
+  font-weight: bold !important;
+}
+
+.appButton{
+  align-self: center;
+  width: 10vw;
+  height: 8vh;
+  background-color: var(--azul);
+  border-radius: 30px;
+}
+
+.appFigure{
+  display: flex;
   
 }
 
-.App-ilustration{
+.appFigure img{
   width: 50vw;
-  height: 80vh;
-  display: flex;
-
+  
+  
 }
