--- a/Projeto Sp Medical Group/sp_medical_group/src/assets/css/Login.css
+++ b/Projeto Sp Medical Group/sp_medical_group/src/assets/css/Login.css
@@ -1,104 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  box-sizing: border-box
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box
 }
 
 :root{
-    --cor-tema: #83BEDF;
-    --cor-dashbord: #F6F6F6;
     --font: normal normal normal 24px 'Montserrat', sans-serif;
-    --font-title: normal normal bold 50px 'Montserrat', sans-serif;
-    --font-size-regular: 24px;
-    --font-size-title:50px;
-    
+    --font-titulo: normal normal bold 50px 'Montserrat', sans-serif;
+    --azul: #83BEDF;
+    --cinza: #F6F6F6;
 }
 
-.Flex-center{
+.loginBody{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+}
+
+.loginIlustration{
+    width: 50vw;
+    height: 100vh;
+    background-color: var(--cinza);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.Flex-evenly-column{
+.loginIlustration figure  img{
+    width: 100%;
+    height: 100%;
+}
+
+.loginLogin{
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.loginContent{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-evenly;
+    width: 80%;
+    height: 80%;
 }
 
-.Login-main{
+.loginContent form{
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 80%;
+    height: 50%;
 }
 
-.Login-ilustration{
-    width: 50vw;
-    height: 100vh;
-    background-color: var(--cor-dashbord);
-}
-
-.Login-login{
-    width: 50vw;
-    height: 100vh;
-}
-
-.Login-text h1{
-    font: var(--font-title);
-}
-
-.Login-input{
-    width: 28vw;
-    height: 10vh;
+.loginContent form input{
+    height: 80px;
+    width: 100%;
     border-radius: 30px;
-    background-color: var(--cor-dashbord);
-    outline: none;
     font: var(--font);
     text-align: center;
-    border: 2px solid #F6F6F6;
+    background-color: var(--cinza);
+    outline: none;
+    border: 2px solid white;
 }
 
-.Login-input:focus{
-    border: 2px solid rgba(0, 0, 0, 0.205);
+.loginContent form input:focus{
+    border: 2px solid black;
 }
 
-.Login-input-email{
-    background-image: url('../icon/login-user.svg');
-    background-repeat: no-repeat;
-    background-position: left;
-    background-position-x: 10px;
-}
-
-.Login-input-senha{
-    background-image: url('../icon/login-lock.svg');
-    background-repeat: no-repeat;
-    background-position: left;
-    background-position-x: 10px;
-}
-
-.Login-form{
-    height: 40vh;
-    flex-direction: column;
-}
-
-
-.Login-button{
-    width: 14vw;
-    height: 8vh;
+.loginContent form button{
+    height: 80px;
+    width: 50%;
     border-radius: 30px;
-    background-color: var(--cor-tema);
     font: var(--font);
-    font-weight: bold;
+    background-color: var(--azul);
     color: white;
-}
-
-.Login-button:hover{
-    cursor: pointer;
-}
-
-
-.icon-teste{
-    color: black;
+    font-weight: bold !important;
 }
