--- a/Projeto Sp Medical Group/sp_medical_group/src/assets/css/List.css
+++ b/Projeto Sp Medical Group/sp_medical_group/src/assets/css/List.css
@@ -26,6 +26,12 @@
     z-index: 00;
 }
 
+.Content-Consulta{
+    height: 100%;
+    width: 100vw;
+    z-index: 00;
+}
+
 .Header{
     width: 100%;
     height: 220px;
